--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
 				"-I${workspaceFolder}\\external", // adds dir to search path for linking files to the front of the include list
 				"-L${workspaceFolder}\\lib", // adds dir to search for path -l
 				"${workspaceFolder}\\src\\*.cpp", // compile all .cpp files in src
-				"${workspaceFolder}\\src\\glad.c", // don't forget glad.c
+				"${workspaceFolder}\\src\\glad\\glad.c", // don't forget glad.c
 				"-lglfw3dll", // include the glfw3dll library
 				"-o", // specify output file
 				"${workspaceFolder}\\lbs.exe" // output file name
